clusters/labinfra/argocd-applications/wordpress-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress
  labels:
    name: wordpress
